--- a/app/views/user/dashboard.erb
+++ b/app/views/user/dashboard.erb
@@ -43,18 +43,28 @@
         :class => "option_buttons", :id => "manage_news_button",:title => t('news_link_title') %>
 
     </div>
-    <div class="button-box">
-      <%= link_to "<div class ='button-label'><p>#{t('examinations')}</p></div>", {:controller => "exam", :action => "index"},
-        :class => "option_buttons", :id => "examinations_button",:title => "          #{t('manage_examinations')}" %>
-    </div>
-    <div class="button-box">
-      <%= link_to "<div class ='button-label'><p>#{t('timetable_text')}</p></div>", {:controller => "timetable", :action => "index"},
-        :class => "option_buttons", :id => "timetable_button",:title => t('timetable_link_title') %>
-    </div>
-    <div class="button-box">
-      <%= link_to "<div class ='button-label'><p>#{t('attendance')}</p></div>", {:controller => "student_attendance", :action => "index"},
-        :class => "option_buttons", :id => "student_attendance_button", :title => t('attendance_link_title')  %>
-    </div>
+
+    <% if @config.include?("Examination") %>
+      <div class="button-box">
+        <%= link_to "<div class ='button-label'><p>#{t('examinations')}</p></div>", {:controller => "exam", :action => "index"},
+          :class => "option_buttons", :id => "examinations_button",:title => "          #{t('manage_examinations')}" %>
+      </div>
+    <% end -%>
+
+    <% if @config.include?("Timetable") %>
+      <div class="button-box">
+        <%= link_to "<div class ='button-label'><p>#{t('timetable_text')}</p></div>", {:controller => "timetable", :action => "index"},
+          :class => "option_buttons", :id => "timetable_button",:title => t('timetable_link_title') %>
+      </div>
+    <% end -%>
+
+    <% if @config.include?('Attendance') %>
+      <div class="button-box">
+        <%= link_to "<div class ='button-label'><p>#{t('attendance')}</p></div>", {:controller => "student_attendance", :action => "index"},
+          :class => "option_buttons", :id => "student_attendance_button", :title => t('attendance_link_title')  %>
+      </div>
+    <% end -%>
+
     <div class="button-box">
       <%= link_to "<div class ='button-label'><p>#{t('settings')}</p></div>", {:controller => "configuration", :action => "index"},
         :class => "option_buttons", :id => "settings_button", :title => t('setting_link_title') %>
@@ -85,12 +95,15 @@
     <div class="button-box">
       <%= link_to "<div class ='button-label'><p>#{t('campus_news')}</p></div>", {:controller => "news", :action => "index"},
         :class => "option_buttons", :id => "campus_news_button",:title => t('news_link_title')%>
+    </div>
+    
+    <% if @config.include?("Timetable") %>
+      <div class="button-box">
+        <%= link_to "<div class ='button-label'><p>#{t('timetable_text')}</p></div>", {:controller => "timetable", :action => "student_view",:id=>@student.id},
+          :class => "option_buttons", :id => "timetable_button",:title => t('timetable_link_title') %>
+      </div>
+    <% end -%>
 
-    </div>
-    <div class="button-box">
-      <%= link_to "<div class ='button-label'><p>#{t('timetable_text')}</p></div>", {:controller => "timetable", :action => "student_view",:id=>@student.id},
-        :class => "option_buttons", :id => "timetable_button",:title => t('timetable_link_title') %>
-    </div>
     <div class="button-box">
       <% unless @user.check_reminders == 0 %>
         <div class="reminder1">
@@ -185,48 +198,59 @@
       <% @employee_subjects= @user.employee_record.subject_ids  %>
       <% if @employee_subjects.empty?%>
 
-        <% if permitted_to? :index, :student_attendance or  permitted_to? :index, :attendances and @employee_subjects.present? or @user.privileges.map{|p| p.name}.include?("StudentAttendanceView") or @user.privileges.map{|p| p.name}.include?("StudentAttendanceRegister") %>
-          <div class="button-box">
-            <%= link_to "<div class ='button-label'><p>#{t('attendance')}</p></div>", {:controller => "student_attendance", :action => "index"},
-              :class => "option_buttons", :id => "student_attendance_button", :title => t('attendance_link_title') %>
-          </div>
-        <%end%>
+        <% if @config.include?("Attendance") %>        
+          <% if permitted_to? :index, :student_attendance or  permitted_to? :index, :attendances and @employee_subjects.present? or @user.privileges.map{|p| p.name}.include?("StudentAttendanceView") or @user.privileges.map{|p| p.name}.include?("StudentAttendanceRegister") %>
+            <div class="button-box">
+              <%= link_to "<div class ='button-label'><p>#{t('attendance')}</p></div>", {:controller => "student_attendance", :action => "index"},
+                :class => "option_buttons", :id => "student_attendance_button", :title => t('attendance_link_title') %>
+            </div>
+          <%end%>
+        <% end -%>
 
+        <% if @config.include?("Examination") %>
+          <% if permitted_to? :index, :exam and (@user.privileges.map{|p| p.name}.include?("ExaminationControl") or @user.privileges.map{|p| p.name}.include?("EnterResults") or @user.privileges.map{|p| p.name}.include?("ViewResults")) %>
+            <div class="button-box">
+              <%= link_to "<div class ='button-label'><p>#{t('examinations')}</p></div>", {:controller => "exam", :action => "index"},
+                :class => "option_buttons", :id => "examinations_button",:title => t('exam_link_title') %>
+            </div>
+          <% end %>
+        <% end -%>
 
-        <% if permitted_to? :index, :exam and (@user.privileges.map{|p| p.name}.include?("ExaminationControl") or @user.privileges.map{|p| p.name}.include?("EnterResults") or @user.privileges.map{|p| p.name}.include?("ViewResults")) %>
+      <% else %>
+        <% if @config.include?("Attendance") %>        
+          <% @attendance_type = Configuration.find_by_config_key('StudentAttendanceType') %>
+          <% unless @attendance_type.config_value == 'Daily' %>
+            <div class="button-box">
+              <%= link_to "<div class ='button-label'><p>#{t('attendance')}</p></div>", {:controller => "student_attendance", :action => "index"},
+                :class => "option_buttons", :id => "student_attendance_button", :title => t('attendance_link_title') %>
+            </div>
+          <% else %>
+            <div class="button-box">
+              <% if permitted_to? :index, :student_attendance or  permitted_to? :index, :attendances %>
+                <%= link_to "<div class ='button-label'><p>#{t('attendance')}</p></div>", {:controller => "student_attendance", :action => "index"},
+                  :class => "option_buttons", :id => "student_attendance_button", :title => t('attendance_link_title')%>
+              <%end%>
+            </div>
+          <% end %>
+        <% end %>
+        
+        <% if @config.include?("Examination") %>
           <div class="button-box">
             <%= link_to "<div class ='button-label'><p>#{t('examinations')}</p></div>", {:controller => "exam", :action => "index"},
               :class => "option_buttons", :id => "examinations_button",:title => t('exam_link_title') %>
           </div>
-        <% end %>
-      <% else %>
-        <% @attendance_type = Configuration.find_by_config_key('StudentAttendanceType') %>
-        <% unless @attendance_type.config_value == 'Daily' %>
-          <div class="button-box">
-            <%= link_to "<div class ='button-label'><p>#{t('attendance')}</p></div>", {:controller => "student_attendance", :action => "index"},
-              :class => "option_buttons", :id => "student_attendance_button", :title => t('attendance_link_title') %>
-          </div>
-        <% else %>
-          <div class="button-box">
-            <% if permitted_to? :index, :student_attendance or  permitted_to? :index, :attendances %>
-              <%= link_to "<div class ='button-label'><p>#{t('attendance')}</p></div>", {:controller => "student_attendance", :action => "index"},
-                :class => "option_buttons", :id => "student_attendance_button", :title => t('attendance_link_title')%>
-            <%end%>
-          </div>
-        <% end %>
-        <div class="button-box">
-          <%= link_to "<div class ='button-label'><p>#{t('examinations')}</p></div>", {:controller => "exam", :action => "index"},
-            :class => "option_buttons", :id => "examinations_button",:title => t('exam_link_title') %>
-        </div>
+        <% end -%>
       <% end  %>
     <% end %>
 
-    <% if permitted_to? :index, :timetable %>
-      <div class="button-box">
-        <%= link_to "<div class ='button-label'><p>#{t('timetable_text')}</p></div>", {:controller => "timetable", :action => "index"},
-          :class => "option_buttons", :id => "timetable_button",:title => t('timetable_link_title') %>
-      </div>
-    <%end%>
+    <% if @config.include?("Timetable") %>
+      <% if permitted_to? :index, :timetable %>
+        <div class="button-box">
+          <%= link_to "<div class ='button-label'><p>#{t('timetable_text')}</p></div>", {:controller => "timetable", :action => "index"},
+            :class => "option_buttons", :id => "timetable_button",:title => t('timetable_link_title') %>
+        </div>
+      <% end %>
+    <% end -%>
 
     <% if permitted_to? :index, :configuration %>
       <div class="button-box">
