--- a/app/views/student/reports.erb
+++ b/app/views/student/reports.erb
@@ -27,86 +27,89 @@
 </div>
 
 <div id="page-yield">
+  <% if @modules.include?('Examination') %>
+    <div id="exam-results-dashboard">
 
-  <div id="exam-results-dashboard">
+      <h3><%= t('academics') %></h3>
 
-    <h3><%= t('academics') %></h3>
+      <div class="exam-results-reports-col">
+        <% if permitted_to? :exam_report, :student %>
+          <h4><%= t('recent_exams') %></h4>
+          <ul>
+            <% @exam_groups.each do |e| %>
+              <li><%= link_to e.name,{:controller => 'exam', :action => 'generated_report',:exam_group=>e.id, :student=>@student.id}%></li>
+            <% end %>
+          </ul>
+        <%end%>
 
-    <div class="exam-results-reports-col">
-      <% if permitted_to? :exam_report, :student %>
-        <h4><%= t('recent_exams') %></h4>
+        <h4><%= t('subject_wise_report') %></h4>
         <ul>
-          <% @exam_groups.each do |e| %>
-            <li><%= link_to e.name,{:controller => 'exam', :action => 'generated_report',:exam_group=>e.id, :student=>@student.id}%></li>
+          <% @subjects.each do |s| %>
+            <li><%= link_to s.name, { :controller => 'exam', :action => 'generated_report3', :student => @student.id, :subject => s.id } %></li>
           <% end %>
         </ul>
-      <%end%>
+      </div>
 
-      <h4><%= t('subject_wise_report') %></h4>
-      <ul>
-        <% @subjects.each do |s| %>
-          <li><%= link_to s.name, { :controller => 'exam', :action => 'generated_report3', :student => @student.id, :subject => s.id } %></li>
+      <div class="exam-results-reports-col">
+
+        <h4><%= t('detailed_report') %></h4>
+        <ul>
+          <% unless @grouped_exams.empty? %>
+            <li><%= link_to "#{t('final_report')}(#{t('exam_goruped')})",{:controller=>'exam', :action=>'generated_report4',:student=>@student.id,:type=>'grouped'} %></li>
+            <li><%= link_to "Transcript Report", { :controller => 'exam', :action => 'student_transcript',:transcript=>{:batch_id=>@student.batch_id},:student_id=>@student.id,:flag=>"1" } %></li>
+          <% else %>
+            <li><%= link_to "#{t('final_report')}",{:controller=>'exam', :action=>'generated_report4',:student=>@student.id,:type=>'general'} %></li>
+            <li><%= link_to "Transcript Report", { :controller => 'exam', :action => 'student_transcript',:transcript=>{:batch_id=>@student.batch_id},:student_id=>@student.id,:flag=>"1"} %></li>
+    <%#= link_to "#{t('compare_past')}", { :controller => 'exam', :action => 'previous_years_marks_overview',:student=>@student.id }%>
+
+          <% end %>
+          <% if Configuration.cce_enabled? %>
+            <li><%= link_to "CCE Transcript Report", { :controller => 'cce_reports', :action => 'student_transcript',:id=>@student.id }%></li>
+          <% end %>
+        </ul>
+
+        <% unless @old_batches.empty? %>
+          <h4><%= t('archives') %></h4>
+          <ul>
+            <% @old_batches.each do |b| %>
+              <% unless @grouped_exams.empty? %>
+                <li><%= link_to b.name+'-G', { :controller => 'exam', :action => 'academic_report', :student => @student.id, :year => b.id,:type=>'grouped' } %></li>
+              <% else %>
+                <li><%= link_to b.name, { :controller => 'exam', :action => 'academic_report', :student => @student.id, :year => b.id,:type=>'general' } %></li>
+              <% end %>
+            <% end %>
+          </ul>
         <% end %>
-      </ul>
-    </div>
 
-    <div class="exam-results-reports-col">
+
+      </div>
+
+      <div class="extender"> </div>
+
+    </div>
+  <% end -%>
+
+  <% if @modules.include?('Attendance') %>
+    <div id="attendance-reports-dashboard">
+
+      <h3><%= t('attendance') %></h3>
 
       <h4><%= t('detailed_report') %></h4>
+
       <ul>
-        <% unless @grouped_exams.empty? %>
-          <li><%= link_to "#{t('final_report')}(#{t('exam_goruped')})",{:controller=>'exam', :action=>'generated_report4',:student=>@student.id,:type=>'grouped'} %></li>
-          <li><%= link_to "Transcript Report", { :controller => 'exam', :action => 'student_transcript',:transcript=>{:batch_id=>@student.batch_id},:student_id=>@student.id,:flag=>"1" } %></li>
-        <% else %>
-          <li><%= link_to "#{t('final_report')}",{:controller=>'exam', :action=>'generated_report4',:student=>@student.id,:type=>'general'} %></li>
-          <li><%= link_to "Transcript Report", { :controller => 'exam', :action => 'student_transcript',:transcript=>{:batch_id=>@student.batch_id},:student_id=>@student.id,:flag=>"1"} %></li>
-  <%#= link_to "#{t('compare_past')}", { :controller => 'exam', :action => 'previous_years_marks_overview',:student=>@student.id }%>
-
-        <% end %>
-        <% if Configuration.cce_enabled? %>
-          <li><%= link_to "CCE Transcript Report", { :controller => 'cce_reports', :action => 'student_transcript',:id=>@student.id }%></li>
-        <% end %>
+        <li><%= link_to "#{t('current_year_report')}", :controller => 'student_attendance', :action => 'student', :id => @student %></li>
       </ul>
-
       <% unless @old_batches.empty? %>
         <h4><%= t('archives') %></h4>
+
         <ul>
           <% @old_batches.each do |b| %>
-            <% unless @grouped_exams.empty? %>
-              <li><%= link_to b.name+'-G', { :controller => 'exam', :action => 'academic_report', :student => @student.id, :year => b.id,:type=>'grouped' } %></li>
-            <% else %>
-              <li><%= link_to b.name, { :controller => 'exam', :action => 'academic_report', :student => @student.id, :year => b.id,:type=>'general' } %></li>
-            <% end %>
+            <li><%= link_to b.name, :controller => 'student_attendance', :action => 'student_report', :id => @student, :year => b.id %></li>
           <% end %>
         </ul>
+
       <% end %>
-
-
     </div>
-
-    <div class="extender"> </div>
-
-  </div>
-
-  <div id="attendance-reports-dashboard">
-
-    <h3><%= t('attendance') %></h3>
-
-    <h4><%= t('detailed_report') %></h4>
-
-    <ul>
-      <li><%= link_to "#{t('current_year_report')}", :controller => 'student_attendance', :action => 'student', :id => @student %></li>
-    </ul>
-    <% unless @old_batches.empty? %>
-      <h4><%= t('archives') %></h4>
-
-      <ul>
-        <% @old_batches.each do |b| %>
-          <li><%= link_to b.name, :controller => 'student_attendance', :action => 'student_report', :id => @student, :year => b.id %></li>
-        <% end %>
-      </ul>
-
-    <% end %>
-  </div>
+  <% end -%>
 
 </div>
